# rim

./: .gitignore  Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs
src/editor/: command_executor.rs  cursor_controller.rs  edit_content.rs  mod.rs  mode_switch.rs  render.rs
src/events/: command_mode.rs  default_mode.rs  editor_mode.rs  mod.rs
src/files/: reader.rs
tests/: tests.rs
