[package]
name = "rim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.10.0"
log = "0.4.20"
unicode-segmentation = "1.7.1"
chrono = "0.4.31"
